--- a/wik_style.css
+++ b/wik_style.css
@@ -88,3 +88,69 @@ input[type=checkbox]{
     float:right;
 }
 
+/***************************************************************/
+/* Social Login Table style */
+.socialtbl{
+    display: table;
+    width: 100%;
+}
+.social {
+    display: table-row;
+}
+.social #social_cell{
+    display: table-cell;
+    width: 50%;
+}
+/* facebook button style */
+#social_cell #facebook-signin {
+    cursor:pointer;
+    display: inline-block;
+    background: white;
+    color: #444;
+    border-radius: 5px;
+    border: thin solid #888;
+    box-shadow: 1px 1px 1px grey;
+    white-space: nowrap;
+}
+#facebook-signin #icon {
+    background: url(./FB-f-Logo__blue_29.png) transparent 5px 50% no-repeat;
+    display: inline-block;
+    vertical-align: middle;
+    width: 42px;
+    height: 35px;
+}
+#facebook-signin #buttonText {
+    display: inline-block;
+    vertical-align: middle;
+    padding-right: 12px;
+    font-weight: bold;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+}
+
+/* google button style */
+#social_cell #google-signin {
+    cursor:pointer;
+    display: inline-block;
+    background: white;
+    color: #444;
+    border-radius: 5px;
+    border: thin solid #888;
+    box-shadow: 1px 1px 1px grey;
+    white-space: nowrap;
+}
+#google-signin #icon {
+    background: url(./g-normal.png) transparent 5px 50% no-repeat;
+    display: inline-block;
+    vertical-align: middle;
+    width: 42px;
+    height: 35px;
+}
+#google-signin #buttonText {
+    display: inline-block;
+    vertical-align: middle;
+    padding-right: 12px;
+    font-weight: bold;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+}
