--- a/stylesheet/wik_style.css
+++ b/stylesheet/wik_style.css
@@ -178,6 +178,10 @@ input[type=checkbox]{
 p#pageCnt {
     display: inline-block;
     margin: 1em;
+    margin-top: 0;
+}
+#paging{
+    margin: 5px 0;
 }
 /* referenced by http://css3button.net/ */
 button[name=pagingBtn] {
