--- a/stylesheet/modal.css
+++ b/stylesheet/modal.css
@@ -14,7 +14,7 @@
 .popup-inner {
     max-width:700px;
     width:90%;
-    padding:40px;
+    padding:30px;
     position:absolute;
     top:50%;
     left:50%;
@@ -29,4 +29,31 @@
     visibility: visible;
 }
 
+/* Taggle Area */
+.taggle_list{
+    padding:0;
+    margin:0;
+}
+
+/* Contents Setting */
+#title {
+    margin-left: 1em; margin-top: 1em;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0), 0 1px 1px rgba(255, 255, 255, 0.7);
+    padding: 8px;
+    border-radius: 4px;
+}
+
+/* input textbox의 placeholder style */
+input::-webkit-input-placeholder {
+    color: #CCC !important;
+}
+input:-moz-placeholder { /* Firefox 18- */
+    color: #CCC !important;
+}
+input::-moz-placeholder {  /* Firefox 19+ */
+    color: #CCC !important;
+}
+input:-ms-input-placeholder {
+    color: #CCC !important;
+}
 /***************************************************************/
