--- a/stylesheet/wik_style.css
+++ b/stylesheet/wik_style.css
@@ -1,5 +1,5 @@
 body{
-    width : 420px;
+    width : 500;
     height: 540px;
     background: #fbf8f8;
 }
@@ -21,15 +21,6 @@ body #wrap{
 }
 
 /***************************************************************/
-/* start - 버튼 디자인*/
-#facebook-signin{
-
-}
-
-/* end - 버튼 디자인*/
-/***************************************************************/
-
-
 /* start - div : 테이블 */
 #context #divTable{
     display: table;
