token auto refresh 정상작동확인, cognito fed identity dataset에 자료 정상추가 확인

--- a/stylesheet/wik_style.css
+++ b/stylesheet/wik_style.css
@@ -155,7 +155,7 @@ input[type=checkbox]{
 }
 
 /* signout button style */
-#signout {
+#signout, input[type=button] {
     margin-top: 0.5em;
     background: #FFFFFF;
     color: #444;
