로딩gif파일 삽입, 단어상태변경 상태메시지 영역 추가

--- a/stylesheet/wik_style.css
+++ b/stylesheet/wik_style.css
@@ -19,7 +19,14 @@ body #wrap{
     width: inherit;
     margin: 0 auto;
 }
-
+p#disclaimer{
+    text-decoration: underline;
+}
+p#status {
+    border-radius: 5px;
+    background-color: rgba(135, 226, 150, 0.3);
+    padding: 5px;
+}
 /***************************************************************/
 /* start - div : 테이블 */
 #context #divTable{
